--- a/app/admin/components/store-order/store-order.component.scss
+++ b/app/admin/components/store-order/store-order.component.scss
@@ -2,6 +2,31 @@
     color: black;
 }
 
+.hideObject {
+  display: none;
+}
+.haddata {
+  display: none;
+}
+.unsetdata {
+  display: unset;
+}
+.mat-drawer-shown {
+  visibility: hidden !important;
+}
+
+.zerobadge0 {
+  display: none;
+}
+
+.text-color{
+  color: #36474f;
+}
+
+.text-bold {
+  font-weight: bold;
+}
+
 td {
   font: 12px Roboto, 'Helvetica Neue', san-serif;
 }
