--- a/app/admin/components/wh-rejection-approval/wh-rejection-approval.component.html
+++ b/app/admin/components/wh-rejection-approval/wh-rejection-approval.component.html
@@ -13,7 +13,7 @@
           Approval
         </li>
         <li class="breadcrumb-item dashboardActive" aria-current="page">
-          WH Rejected xx
+          WH Rejected
         </li>
       </ol>
     </nav>
