--- a/app/admin/components/projects-cancelled-po/projects-cancelled-po.component.html
+++ b/app/admin/components/projects-cancelled-po/projects-cancelled-po.component.html
@@ -44,6 +44,9 @@
 
   </div>
 
+  <!-- <button (click)="any($event)">Pussy</button> -->
+
+  <!-- <app-projects (valueChange)='displayCounter($event)'></app-projects> -->
   <!-- table -->
   <div class="col-lg-12">
     <div class="d-flex">
@@ -1819,3 +1822,4 @@
     </div>
   </div>
 </form>
+
