--- a/app/admin/components/projects/projects.component.html
+++ b/app/admin/components/projects/projects.component.html
@@ -1259,7 +1259,7 @@
         <div class="modal-footer">
           <button mat-stroked-button [disabled]="!editForm.valid" color="primary" class="mr-2"
             (click)="onRecieveButtonClick(editProject.projectID)">
-            Receive XXX
+            Receive
           </button>
           <button [hidden]="true" mat-stroked-button color="warn" data-dismiss="modal" id="editFormCancel">
             Cancel
