--- a/app/admin/components/projects/projects.component.html
+++ b/app/admin/components/projects/projects.component.html
@@ -56,6 +56,11 @@
           </div>
         </div>
 
+  <button (click)="any($event)">Method 1</button>
+  <!-- <button (click)="any2($event)">Method 2</button>
+  <button (click)="any3($event)">Method 3</button>
+  <button (click)="any4($event)">Method 4</button> -->
+
         <!-- table -->
         <div class="col-lg-12">
           <div class="d-flex">
