--- a/app/admin/components/user-account/user-account.component.html
+++ b/app/admin/components/user-account/user-account.component.html
@@ -300,7 +300,7 @@
                   <mat-label>Approver 1:</mat-label>
                   <mat-select formControlName="first_approver_id" class="example-full-width"
                     (change)="getNewFirstApproverId($event.target.value)" 
-          
+                    (selectionChange)="getNewFirstApproverId($event.value)" 
                     >
                     <mat-option value="">Not Applicable</mat-option>
                     <mat-option *ngFor="let item of approverList"  [value]="item.employee_number">{{ item.firstName + " "
@@ -315,7 +315,9 @@
                 <mat-form-field appearance="outline" class="example-full-width">
                   <mat-label>Approver 2:</mat-label>
                   <mat-select formControlName="second_approver_id" class="example-full-width"
-                    (change)="getNewSecondApproverId($event.target.value)">
+                    (change)="getNewSecondApproverId($event.target.value)"
+                    (selectionChange)="getNewSecondApproverId($event.value)"
+                    >
                     <mat-option value="">Not Applicable</mat-option>
                     <mat-option *ngFor="let item of approverList" [value]="item.employee_number">{{ item.firstName + " "
                       +
@@ -328,7 +330,9 @@
                 <mat-form-field appearance="outline" class="example-full-width">
                   <mat-label>Approver 3:</mat-label>
                   <mat-select formControlName="third_approver_id" class="example-full-width"
-                    (change)="getNewThirdApproverId($event.target.value)">
+                    (change)="getNewThirdApproverId($event.target.value)"
+                    (selectionChange)="getNewThirdApproverId($event.value)"
+                    >
                     <mat-option value="">Not Applicable</mat-option>
                     <mat-option *ngFor="let item of approverList" [value]="item.employee_number">{{ item.firstName + " "
                       +
@@ -349,7 +353,9 @@
                 <mat-form-field appearance="outline" class="example-full-width">
                   <mat-label>Approver 4:</mat-label>
                   <mat-select formControlName="fourth_approver_id" class="example-full-width"
-                    (change)="getNewFourthApproverId($event.target.value)">
+                    (change)="getNewFourthApproverId($event.target.value)"
+                    (selectionChange)="getNewFourthApproverId($event.value)"
+                    >
                     <mat-option value="">Not Applicable</mat-option>
                     <mat-option *ngFor="let item of approverList" [value]="item.employee_number">{{ item.firstName + " "
                       +
