Dual Binding Auto Refresh Communication Parent To Child Components

--- a/app/admin/components/projects/projects.component.html
+++ b/app/admin/components/projects/projects.component.html
@@ -188,7 +188,7 @@
             totalCancelledPoRowCount }}</span>
         </ng-template>
         <!-- <app-projects-cancelled-po></app-projects-cancelled-po> -->
-        <app-projects-cancelled-po [child_id]=samplelang (uploaded)="someMethod($event)"></app-projects-cancelled-po>
+        <app-projects-cancelled-po [child_id]=ChildForm (uploaded)="someMethod($event)"></app-projects-cancelled-po>
       </mat-tab>
     </mat-tab-group>
   </div>
